TM-13684 - Support Cancel button

--- a/web-app/tds/web-app/app-js/modules/licenseManager/components/detail/license-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/licenseManager/components/detail/license-detail.component.html
@@ -107,13 +107,13 @@
                                 <kendo-daterange>
                                     <label class="col-sm-2 control-label">Valid Dates:</label>
                                     <div class="col-sm-2" style="width: 173px;">
-                                        <kendo-dateinput kendoDateRangeStartInput [(value)]="range.start" [disabled]="!editMode"></kendo-dateinput>
+                                        <kendo-dateinput kendoDateRangeStartInput [(value)]="licenseModel.start" [disabled]="!editMode"></kendo-dateinput>
                                     </div>
                                     <div class="col-sm-1" style="width: 10px; padding-top: 9px;">
                                         <span><i class="fa fa-fw fa-ellipsis-v"></i></span>
                                     </div>
                                     <div class="col-sm-2">
-                                        <kendo-dateinput kendoDateRangeEndInput [(value)]="range.end" [disabled]="!editMode"></kendo-dateinput>
+                                        <kendo-dateinput kendoDateRangeEndInput [(value)]="licenseModel.end" [disabled]="!editMode"></kendo-dateinput>
                                     </div>
                                 </kendo-daterange>
 							</div>
