--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
@@ -3,16 +3,16 @@
         <div>
             <div class="btn-group"
                  *ngIf="canShowSaveButton()">
-                <button tds-button
-                        icon="floppy-o" class="btn"
+                <tds-button
+                        [action]="ButtonActions.GenericSave"
                         (click)="save(getSaveButtonId())"
                         [ngClass]="{'btn-default':!isDirty(),'btn-success':isDirty()}"
+                        [title]="canSave() ? translateService.transform('GLOBAL.SAVE') : translateService.transform('GLOBAL.SAVE_AS') "
                         [attr.id]="getSaveButtonId()">
-                    {{ canSave() ? 'GLOBAL.SAVE' : 'GLOBAL.SAVE_AS' | translate }}
-                </button>
+                </tds-button>
 
                 <button type="button" class="btn dropdown-toggle"
-                        [ngClass]="{'btn-default':!isDirty(),'btn-success':isDirty()}"
+                        [ngClass]="{'btn': true, 'btn-default': !isDirty(),'btn-success': isDirty(), 'pull-right': true }"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="caret"></span>
                     <span class="sr-only">Toggle Dropdown</span>
@@ -28,25 +28,24 @@
                     </li>
                 </ul>
             </div>
-            <button tds-button
-                    [attr.icon]="model.isFavorite? 'star' : 'star-o'"
-                    class="text-yellow tds-button-icon"
-                    (click)="onFavorite()">
-            </button>
-            <button tds-button
-                    icon="download"
-                    class="btn btn-default"
-                    (click)="onExport()"
-                    id="btnExport">Export</button>
+
+            <tds-button [action]="model.isFavorite ? ButtonActions.GenericIsFavorite : ButtonActions.GenericIsNotFavorite"
+                        class="text-yellow"
+                        isIconButton="true"
+                        (click)="onFavorite()">
+            </tds-button>
+
+            <tds-button [action]="ButtonActions.GenericExport" (click)="onExport()" [id]="'btnExport'"></tds-button>
+
             <asset-explorer-view-selector
                     #select="assetExplorerViewSelector">
             </asset-explorer-view-selector>
-            <button tds-button
-                    icon="cog"
-                    class="tds-button-icon pull-right"
-                    *ngIf="isEditAvailable()"
-                    (click)="onEdit()">
-            </button>
+            <tds-button *ngIf="isEditAvailable()"
+                        isIconButton="true"
+                        [action]="ButtonActions.GenericConfiguration"
+                        class="pull-right"
+                        (click)="onEdit()">
+            </tds-button>
         </div>
         <div class="box-body">
             <asset-explorer-view-grid
