--- a/web-app/tds/web-app/css/shared/components/tds-asset-tag-selector.sass
+++ b/web-app/tds/web-app/css/shared/components/tds-asset-tag-selector.sass
@@ -15,20 +15,21 @@
             span
               div
                 height: 26px
-                padding-left: 10px
-                padding-right: 22px
+                padding-left: 7px
+                padding-right: 28px
                 font-size: 13px
                 padding-top: 5px
                 font-weight: 600
                 margin-top: 1px
                 margin-left: 1px
-                max-width: 150px
+                max-width: 155px
                 white-space: nowrap
                 overflow: hidden
                 text-overflow: ellipsis
             span.k-select
               span.k-i-close
-                margin-left: -26px
+                margin-left: -31px
+                font-size: 18px
       span.k-clear-value
         display: none !important
   // -------------------------------------------------------------------
