TM-13773 Fix issue id button

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
@@ -58,7 +58,7 @@
                     (click)="onFavorite()">
             </tds-button>
 
-            <tds-button [action]="ButtonActions.GenericExport" (click)="onExport()" [id]="btnExport"></tds-button>
+            <tds-button [action]="ButtonActions.GenericExport" (click)="onExport()" [id]="'btnExport'"></tds-button>
 
             <asset-explorer-view-selector
                     #select="assetExplorerViewSelector">
