TM-13540 - Created new date/time component with time controls

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -115,7 +115,9 @@
     td .label_sm
       background: none repeat scroll 0% 0% #f3f4f6
     td .tm-input-control
-      max-width: 155px
+      max-width: 182px
+      min-width: 133px
+      width: 100%
     div
       .highField
         label
