--- a/web-app/tds/web-app/css/base/color.scss
+++ b/web-app/tds/web-app/css/base/color.scss
@@ -58,7 +58,7 @@ $color-normal-field: $color--grey;
 $color-unimportant-field: $color--grey3;
 $color-hidden-field: $color--white;
 
-// TASK STaTUS
+// TASK STATUS
 $color-task-hold-bg--yellow: #FFFF33;
 $color-task-hold-bg-overtime--red: #FF0000;
 $color-task-planned-bg--white: #FFFFFF;
